--- a/configs/wifi/WCNSS_qcom_cfg.ini
+++ b/configs/wifi/WCNSS_qcom_cfg.ini
@@ -573,13 +573,19 @@ gcmp_enabled=0
 enable_rtt_mac_randomization=1
 
 #Enable ETSI SRD channels by Xiaomi. Qualcom default value is disable.
-etsi_srd_chan_in_master_mode=1
+etsi13_srd_chan_in_master_mode=1
 
 # This ini is used to allow STA+SAP SCC on DFS channel with master mode
 # support disabled
 # 0 - Disallow STA+SAP SCC on DFS channel
 # 1 - Allow STA+SAP SCC on DFS channel with master mode disabled
 g_sta_sap_scc_on_dfs_chan=1
+
+#Configures Channel Bonding in 24 GHz
+gChannelBondingMode24GHz=0
+
+gActiveUcBpfMode=0
+gActiveMcBcBpfMode=1
 
 END
 
